2012-11-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/status_monitor.php: Added  title for metaconsole.

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/reporting/reporting_viewer.php: Fix some bugs of
	reports on metaconsole

2012-11-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Fixed progress_bar in metaconsole.

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php: Performance improvements
	in networkmaps

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_delete_modules.php: Fixed a bug 
	on massive delete modules due of a copypaste

2012-11-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php
	include/functions_networkmap.php
	operation/agentes/status_monitor.php
	operation/netflow/nf_live_view.php: Improve the 
	performance of networkmap with the new status counts.
	Modify some common code between console and metaconsole

2012-11-26  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_groups.php,
	  include/functions_agents.php,
	  include/functions_treeview.php,
	  include/functions_os.php,
	  include/functions_tags.php,
	  operation/tree.php: Added metaconsole support to the tree view.

2012-11-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	operation/events/events_list.php
	operation/events/events.php
	operation/search_results.php
	godmode/netflow/nf_edit.php: Fix paths problems

2012-11-21 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/integria_incidents/incident.php: Fixed a bug in integration
	between Integria and Pandora on Incident management.

	MERGED FROM 4.0.2

2012-11-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/debug.php: fixed the execution of keygen
	when there is some wrong in the execution the message for user is