@@ -1,3 +1,9 @@
+2012-11-27  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions_treeview.php,
+	  operation/tree.php: Added support for agent and module navigation
+	  from the metaconsole.
+
 2012-11-27 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* operation/agentes/status_monitor.php: Added  title for metaconsole.
